--- a/MyTests/packages.config
+++ b/MyTests/packages.config
@@ -5,6 +5,7 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="NUnit" version="3.11.0" targetFramework="net472" />
   <package id="NUnit.Allure" version="1.0.6" targetFramework="net472" />
+  <package id="NUnit.ConsoleRunner" version="3.8.0" targetFramework="net472" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net472" />
   <package id="Selenium.Chrome.WebDriver" version="74.0.0" targetFramework="net472" />
   <package id="Selenium.Support" version="3.13.1" targetFramework="net472" />
