--- a/MyTests/packages.config
+++ b/MyTests/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Allure.Commons" version="2.3.64.1" targetFramework="net472" />
+  <package id="AllureCSharpCommons" version="0.2.0" targetFramework="net472" />
+  <package id="log4net" version="2.0.3" targetFramework="net472" />
   <package id="MimeTypesMap" version="1.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
   <package id="NUnit" version="3.11.0" targetFramework="net472" />
