--- a/MyTests/MyTests.csproj
+++ b/MyTests/MyTests.csproj
@@ -93,12 +93,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="base\Actions.cs" />
-    <Compile Include="base\Driver.cs" />
+    <Compile Include="base\BasePage.cs" />
+    <Compile Include="base\DriverManager.cs" />
     <Compile Include="base\Program.cs" />
     <Compile Include="pages\LoginPage.cs" />
     <Compile Include="pages\MainPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="tests\BaseTest.cs" />
     <Compile Include="tests\SmokeTests.cs" />
     <Compile Include="utils\Constants.cs" />
   </ItemGroup>
